--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <li>Fecha de nacimiento: <strong>24/6/1987</strong></li>
          <li>Lugar de nacimiento: <strong>Rosario - Argentina</strong></li>
       </ul>
-      <h2>Trayectori</h2>
+      <h2>Trayectoria</h2>
       <ul>
          <li>1994:1999: <strong>Newell´s Old Boys (Inferiores)</strong></li>
          <li>2000-2021: <strong>Barcelona F.C.</strong></li>
