arregle las reedirecciones.

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       <h3>Reedirección</h3>
       <ulp> Entrega 2: </ulp>
       <a
-         href="file:///Users/agustincarrizo/Desktop/ProgramacionC/Entregas/Primer%20entrega/index2.html"
+         href="https://segunda-entrega-rho.vercel.app"
          >Listas anidadas.</a>
       <br />
       <ulp> Entrega 3: </ulp>
       <a
-         href="file:///Users/agustincarrizo/Desktop/ProgramacionC/Entregas/Primer%20entrega/index3.html"
+         href="https://tercer-entrega-nine.vercel.app"
          >Formularios.</a>
    </body>
 </html>
