--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
       </ul>
       <hr />
       <h3>Reedirección</h3>
-      <ulp> Entrega 2: </ulp>
+      <div> <span>Entrega 2:</span>
       <a
          href="https://segunda-entrega-rho.vercel.app"
-         >Listas anidadas.</a>
+         >Listas anidadas.</a> </div> 
+      
       <br />
-      <ulp> Entrega 3: </ulp>
+      <div> <span> Entrega 3: </span>
       <a
          href="https://tercer-entrega-nine.vercel.app"
-         >Formularios.</a>
+         >Formularios.</a> <div>
    </body>
 </html>
